# DioxusTonicChattApp

./: README.md
hot_dog_example/: Cargo.toml  Dioxus.toml
hot_dog_example/assets/: main.css
hot_dog_example/src/: guide_component.rs  guide_data_fetching.rs  main.rs
hot_dog_example/src/components/: breed_pic.rs  mod.rs
